--- a/src/index.css
+++ b/src/index.css
@@ -18,3 +18,10 @@
     background-color: rgba(0, 0, 0, 0.8); 
     background-blend-mode: overlay; 
 }
+*::-webkit-scrollbar {
+    width: 6px;
+}
+*::-webkit-scrollbar-thumb {
+      background: #868A92;
+      border-radius: 8px;
+    }
